--- a/aplicacion-prueba/src/main/resources/application.properties
+++ b/aplicacion-prueba/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.main.web-application-type=servlet
 server.port=8081
 server.servlet.context-path=/aplicacion-prueba-0.0.1-SNAPSHOT
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
 
