--- a/aplicacion-prueba/src/main/resources/application.properties
+++ b/aplicacion-prueba/src/main/resources/application.properties
@@ -10,5 +10,10 @@ server.port=8081
 server.servlet.context-path=/aplicacion-prueba-0.0.1-SNAPSHOT
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-exception=true
+server.error.include-stacktrace=always
 
